// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render 1 expense summary 1`] = `
<div>
  <h1>
    Viewing 
    1
     expenses, totaling at 
    $4.75
    .
  </h1>
</div>
`;

exports[`should render multiple expenses summary 1`] = `
<div>
  <h1>
    Viewing 
    20
     expenses, totaling at 
    $100.00
    .
  </h1>
</div>
`;
